# RajawaliAssimpIntegration

./: .gitmodules  .travis.before_script.sh  .travis.compile.sh  .travis.publish.sh  .travis.yml  README.md  build.gradle  deps.gradle  gradle.properties  settings.gradle
assimpintegration/: CMakeLists.txt  build.gradle
assimpintegrationapi24/: CMakeLists.txt  build.gradle
assimpintegrationapi24/src/androidTest/java/com/keyw/android/assimpintegration/: ExampleInstrumentedTest.java
assimpintegrationapi24/src/main/: AndroidManifest.xml
assimpintegrationapi24/src/main/res/values/: strings.xml
assimpintegrationapi24/src/test/java/com/keyw/android/assimpintegration/: ExampleUnitTest.java
gradle-fury/: gradle.properties
gradle-fury/it/GradleBootstrap/: build.gradle
gradle-fury/it/GradleConsumers/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
